(WIP)  Query rendering finally beginning to look like it works